--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quebra-Cabeça 3x3</title>
+  <title>sitezinho</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
