--- a/paginas/final.html
+++ b/paginas/final.html
@@ -29,12 +29,9 @@
             <p>???</p>
         </a>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/nyuo9-OjNNg?si=OeI3RANiNwrtdRIm" 
-title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-<p class="legenda">eu te amo muito.</p>
-
+        <a href="../paginas/album.html">
+            <p>PROSSIGA.</p>
+        </a>
     </main>
     <footer>
     </footer>
