--- a/paginas/album.html
+++ b/paginas/album.html
@@ -12,24 +12,25 @@
         <p>Tava olhando a galeria e achei algumas lembranças, saiba que cada foto carrega um sentimento que até hoje não se desfez.</p>
     </header>
 <main>
-    <div class="carrosel">
-        <button class="seta prev">⟵</button>
+<div class="carrosel">
 
-        <div class="visao">
-            <img id="foto">
-        </div>
-
-        <div class="botoes">
-            <a class="link-centro" href="https://open.spotify.com/playlist/2gjXNJnmmsqDe5VWrtRNPG?si=B6c-z-D0SoGqdxcaxhAXRA" target="_blank">
-                <button class="botao-music">Para você</button>
-            </a>
-            <a class="link-centro" href="notas.html">
-                <button class="botao-notas">Leia</button>
-            </a>
-        </div>
-
-        <button class="seta next">⟶</button>
+    <div class="visao">
+        <img id="foto">
+        <p id="legenda">Arrasta pro lado..</p>
     </div>
+
+    <div class="botoes">
+        <a class="link-centro" href="https://open.spotify.com/playlist/2gjXNJnmmsqDe5VWrtRNPG?si=B6c-z-D0SoGqdxcaxhAXRA" target="_blank">
+            <button class="botao-music">Para você</button>
+        </a>
+
+        <a class="link-centro" href="notas.html">
+            <button class="botao-notas">Leia</button>
+        </a>
+    </div>
+
+</div>
+
 </main>
 
 <script src="../scripts.js/album.js"></script>
